added health checking endpoints
